[project]
name = "myutils"
version = "0.0.1"
authors = [
  { name="Vidyasagar Sadhu", email="omsrisagar@gmail.com" },
]
description = "Package containing useful utilities for ML projects"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    'matplotlib',
    'pickle',
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/omsrisagar/myutils"
Issues = "https://github.com/omsrisagar/myutils/issues"